# hybridmqa

./: .gitignore  LICENSE  README.md  pyproject.toml
datasets/: README.md
docs/: index.html
docs/static/css/: index.css
hybridmqa/: utils.py
hybridmqa/data/: data_io_utils.py  dataset.py
hybridmqa/model/: archit.py  backbone.py
hybridmqa/run/: inference.py  test.py  train.py
scripts/: prepare_normal_vertex_maps.py  test.sh  train_tmqa.sh  train_tsmd.sh  train_vcmesh.sh  train_yn2023.sh
